<resources>
    <string name="app_name">Maria_Calculator_Dec11</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">/</string>
    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="multiplication">*</string>
    <string name="equals">=</string>
    <string name="history">Advance - With History</string>
    <string name="standard_no_history">Standard - No History</string>
    <string name="no_history_to_show">No History to Show</string>
    <string name="historyheading">History</string>
</resources>